--- a/main.html
+++ b/main.html
@@ -10,6 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+    <h2>Feedback Form</h2>
+    <form action="/submit" method="POST">
+        <!-- Name Field -->
+        <label for="name">Name *</label>
+        <input type="text" id="name" name="name" minlength="3" maxlength="50" required><br><br>
+
+        <!-- Portfolio URL Field -->
+        <label for="portfolio">Portfolio URL *</label>
+        <input type="url" id="portfolio" name="portfolio" required><br><br>
+
+        <!-- Favorite Color Field -->
+        <label for="favColor">Favorite Color *</label>
+        <input type="color" id="favColor" name="favColor" required><br><br>
+
+        <!-- Likeness Field (Range) -->
+        <label for="likeness">Likeness (1 to 100) *</label>
+        <input type="range" id="likeness" name="likeness" min="1" max="100" required><br><br>
+
+        <!-- Submit Button -->
+        <button type="submit">Submit</button>
+    </form>
 
 </body>
 
